src/ffi.rs

extern "C" {
    #[doc = " \\brief Get global integrated loudness in LUFS across multiple instances."]
    #[doc = ""]
    #[doc = "  @param sts array of library states."]
    #[doc = "  @param size length of sts"]
    #[doc = "  @param out integrated loudness in LUFS. -HUGE_VAL if result is negative"]
    #[doc = "             infinity."]
    #[doc = "  @return"]
    #[doc = "    - EBUR128_SUCCESS on success."]
    #[doc = "    - EBUR128_ERROR_INVALID_MODE if mode \"EBUR128_MODE_I\" has not been set."]
    pub fn ebur128_loudness_global_multiple(
        sts: *mut *mut ebur128_state,
        size: usize,
        out: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Get momentary loudness (last 400ms) in LUFS."]
    #[doc = ""]
    #[doc = "  @param st library state."]
    #[doc = "  @param out momentary loudness in LUFS. -HUGE_VAL if result is negative"]
    #[doc = "             infinity."]
    #[doc = "  @return"]
    #[doc = "    - EBUR128_SUCCESS on success."]
    pub fn ebur128_loudness_momentary(
        st: *mut ebur128_state,
        out: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Get short-term loudness (last 3s) in LUFS."]
    #[doc = ""]
    #[doc = "  @param st library state."]
    #[doc = "  @param out short-term loudness in LUFS. -HUGE_VAL if result is negative"]
    #[doc = "             infinity."]
    #[doc = "  @return"]
    #[doc = "    - EBUR128_SUCCESS on success."]
    #[doc = "    - EBUR128_ERROR_INVALID_MODE if mode \"EBUR128_MODE_S\" has not been set."]
    pub fn ebur128_loudness_shortterm(
        st: *mut ebur128_state,
        out: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Get loudness of the specified window in LUFS."]
    #[doc = ""]
    #[doc = "  window must not be larger than the current window set in st."]
    #[doc = "  The current window can be changed by calling ebur128_set_max_window()."]
    #[doc = ""]
    #[doc = "  @param st library state."]
    #[doc = "  @param window window in ms to calculate loudness."]
    #[doc = "  @param out loudness in LUFS. -HUGE_VAL if result is negative infinity."]
    #[doc = "  @return"]
    #[doc = "    - EBUR128_SUCCESS on success."]
    #[doc = "    - EBUR128_ERROR_INVALID_MODE if window larger than current window in st."]
    pub fn ebur128_loudness_window(
        st: *mut ebur128_state,
        window: ::std::os::raw::c_ulong,
        out: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Get loudness range (LRA) of programme in LU."]
    #[doc = ""]
    #[doc = "  Calculates loudness range according to EBU 3342."]
    #[doc = ""]
    #[doc = "  @param st library state."]
    #[doc = "  @param out loudness range (LRA) in LU. Will not be changed in case of"]
    #[doc = "             error. EBUR128_ERROR_NOMEM or EBUR128_ERROR_INVALID_MODE will be"]
    #[doc = "             returned in this case."]
    #[doc = "  @return"]
    #[doc = "    - EBUR128_SUCCESS on success."]
    #[doc = "    - EBUR128_ERROR_NOMEM in case of memory allocation error."]
    #[doc = "    - EBUR128_ERROR_INVALID_MODE if mode \"EBUR128_MODE_LRA\" has not been set."]
    pub fn ebur128_loudness_range(st: *mut ebur128_state, out: *mut f64) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Get loudness range (LRA) in LU across multiple instances."]
    #[doc = ""]
    #[doc = "  Calculates loudness range according to EBU 3342."]
    #[doc = ""]
    #[doc = "  @param sts array of library states."]
    #[doc = "  @param size length of sts"]
    #[doc = "  @param out loudness range (LRA) in LU. Will not be changed in case of"]
    #[doc = "             error. EBUR128_ERROR_NOMEM or EBUR128_ERROR_INVALID_MODE will be"]
    #[doc = "             returned in this case."]
    #[doc = "  @return"]
    #[doc = "    - EBUR128_SUCCESS on success."]
    #[doc = "    - EBUR128_ERROR_NOMEM in case of memory allocation error."]
    #[doc = "    - EBUR128_ERROR_INVALID_MODE if mode \"EBUR128_MODE_LRA\" has not been set."]
    pub fn ebur128_loudness_range_multiple(
        sts: *mut *mut ebur128_state,
        size: usize,
        out: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Get maximum sample peak from all frames that have been processed."]
    #[doc = ""]
    #[doc = "  The equation to convert to dBFS is: 20 * log10(out)"]
    #[doc = ""]
    #[doc = "  @param st library state"]
    #[doc = "  @param channel_number channel to analyse"]
    #[doc = "  @param out maximum sample peak in float format (1.0 is 0 dBFS)"]
    #[doc = "  @return"]
    #[doc = "    - EBUR128_SUCCESS on success."]
    #[doc = "    - EBUR128_ERROR_INVALID_MODE if mode \"EBUR128_MODE_SAMPLE_PEAK\" has not"]
    #[doc = "      been set."]
    #[doc = "    - EBUR128_ERROR_INVALID_CHANNEL_INDEX if invalid channel index."]
    pub fn ebur128_sample_peak(
        st: *mut ebur128_state,
        channel_number: ::std::os::raw::c_uint,
        out: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Get maximum sample peak from the last call to add_frames()."]
    #[doc = ""]
    #[doc = "  The equation to convert to dBFS is: 20 * log10(out)"]
    #[doc = ""]
    #[doc = "  @param st library state"]
    #[doc = "  @param channel_number channel to analyse"]
    #[doc = "  @param out maximum sample peak in float format (1.0 is 0 dBFS)"]
    #[doc = "  @return"]
    #[doc = "    - EBUR128_SUCCESS on success."]
    #[doc = "    - EBUR128_ERROR_INVALID_MODE if mode \"EBUR128_MODE_SAMPLE_PEAK\" has not"]
    #[doc = "      been set."]
    #[doc = "    - EBUR128_ERROR_INVALID_CHANNEL_INDEX if invalid channel index."]
    pub fn ebur128_prev_sample_peak(
        st: *mut ebur128_state,
        channel_number: ::std::os::raw::c_uint,
        out: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Get maximum true peak from all frames that have been processed."]
    #[doc = ""]
    #[doc = "  Uses an implementation defined algorithm to calculate the true peak. Do not"]
    #[doc = "  try to compare resulting values across different versions of the library,"]
    #[doc = "  as the algorithm may change."]
    #[doc = ""]
    #[doc = "  The current implementation uses a custom polyphase FIR interpolator to"]
    #[doc = "  calculate true peak. Will oversample 4x for sample rates < 96000 Hz, 2x for"]
    #[doc = "  sample rates < 192000 Hz and leave the signal unchanged for 192000 Hz."]
    #[doc = ""]
    #[doc = "  The equation to convert to dBTP is: 20 * log10(out)"]
    #[doc = ""]
    #[doc = "  @param st library state"]
    #[doc = "  @param channel_number channel to analyse"]
    #[doc = "  @param out maximum true peak in float format (1.0 is 0 dBTP)"]
    #[doc = "  @return"]
    #[doc = "    - EBUR128_SUCCESS on success."]
    #[doc = "    - EBUR128_ERROR_INVALID_MODE if mode \"EBUR128_MODE_TRUE_PEAK\" has not"]
    #[doc = "      been set."]
    #[doc = "    - EBUR128_ERROR_INVALID_CHANNEL_INDEX if invalid channel index."]
    pub fn ebur128_true_peak(
        st: *mut ebur128_state,
        channel_number: ::std::os::raw::c_uint,
        out: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Get maximum true peak from the last call to add_frames()."]
    #[doc = ""]
    #[doc = "  Uses an implementation defined algorithm to calculate the true peak. Do not"]
    #[doc = "  try to compare resulting values across different versions of the library,"]
    #[doc = "  as the algorithm may change."]
    #[doc = ""]
    #[doc = "  The current implementation uses a custom polyphase FIR interpolator to"]
    #[doc = "  calculate true peak. Will oversample 4x for sample rates < 96000 Hz, 2x for"]
    #[doc = "  sample rates < 192000 Hz and leave the signal unchanged for 192000 Hz."]
    #[doc = ""]
    #[doc = "  The equation to convert to dBTP is: 20 * log10(out)"]
    #[doc = ""]
    #[doc = "  @param st library state"]
    #[doc = "  @param channel_number channel to analyse"]
    #[doc = "  @param out maximum true peak in float format (1.0 is 0 dBTP)"]
    #[doc = "  @return"]
    #[doc = "    - EBUR128_SUCCESS on success."]
    #[doc = "    - EBUR128_ERROR_INVALID_MODE if mode \"EBUR128_MODE_TRUE_PEAK\" has not"]
    #[doc = "      been set."]
    #[doc = "    - EBUR128_ERROR_INVALID_CHANNEL_INDEX if invalid channel index."]
    pub fn ebur128_prev_true_peak(
        st: *mut ebur128_state,
        channel_number: ::std::os::raw::c_uint,
        out: *mut f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Get relative threshold in LUFS."]
    #[doc = ""]
    #[doc = "  @param st library state"]
    #[doc = "  @param out relative threshold in LUFS."]
    #[doc = "  @return"]
    #[doc = "    - EBUR128_SUCCESS on success."]
    #[doc = "    - EBUR128_ERROR_INVALID_MODE if mode \"EBUR128_MODE_I\" has not"]
    #[doc = "      been set."]
    pub fn ebur128_relative_threshold(
        st: *mut ebur128_state,
        out: *mut f64,
    ) -> ::std::os::raw::c_int;
}
